修改模版引擎

--- a/support/maven-archetype/src/main/resources/archetype-resources/src/main/resources/application.properties
+++ b/support/maven-archetype/src/main/resources/archetype-resources/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 #set( $symbol_dollar = '$' )
 #set( $symbol_escape = '\' )
 ${symbol_pound}h2 database settings
-jdbc.driver=org.h2.Driver
-jdbc.url=jdbc:h2:file:~/.h2/${artifactId};AUTO_SERVER=TRUE;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-jdbc.username=sa
-jdbc.password=
+${symbol_pound}jdbc.driver=org.h2.Driver
+${symbol_pound}jdbc.url=jdbc:h2:file:~/.h2/${artifactId};AUTO_SERVER=TRUE;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+${symbol_pound}jdbc.username=sa
+${symbol_pound}jdbc.password=
 
 ${symbol_pound}log4jdbc driver
 ${symbol_pound}jdbc.driver=net.sf.log4jdbc.DriverSpy
@@ -18,10 +18,10 @@ ${symbol_pound}jdbc.username=${artifactId}
 ${symbol_pound}jdbc.password=${artifactId}
 
 ${symbol_pound}mysql database setting
-${symbol_pound}jdbc.driver=com.mysql.jdbc.Driver
-${symbol_pound}jdbc.url=jdbc:mysql://localhost/${artifactId}?useUnicode=true&characterEncoding=utf-8
-${symbol_pound}jdbc.username=root
-${symbol_pound}jdbc.password=
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/${artifactId}?useUnicode=true&characterEncoding=utf-8
+jdbc.username=root
+jdbc.password=123456
 
 ${symbol_pound}connection pool settings
 jdbc.pool.maxIdle=10
